chore: Change license and add .candid extension
Update project license from MIT to Apache-2.0 and add support for
.candid file extension in addition to the existing .did extension.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Candid grammar for tree-sitter",
   "repository": "https://github.com/perforate-org/tree-sitter-candid",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "author": {
     "name": "Yota Inomoto",
     "email": "yota@perforate.org"
